# thesis_project

./: .gitattributes  .gitignore  CMakeLists.txt  MobileNetV2_tflite_model.ipynb  MobileNetV2_tflite_model_v2.ipynb  README.md  README.rst  prj.conf  runner.sh  sample.yaml
assets/: assets  image.h  image_converter.py
image_headers/: class000.h  class100.h  class120.h
scripts/: decode_image_binary  image_preprocessing.py  images_into_headers_bash.sh  main.c  raw_buffer_creation.c  raw_buffer_creation.h  raw_buffer_image_decoder.c  raw_buffer_image_decoder.h
src/: constants.hpp  gesture_model.cc  gesture_model.hpp  image_buffer.h  main.c  main.cc  model_data.cc  output_handler.cc  output_handler.hpp  zephyr_const_includers.h
tflite_model/: zephyr_quantized_int8.tflite
